--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "bootstrap-daterangepicker": "^2.1.25",
+    "bootstrap-daterangepicker": "git://github.com/zgrannan/bootstrap-daterangepicker.git#c6ce67f",
     "object-assign": "^4.1.1"
   },
   "peerDependencies": {
